@@ -78,6 +78,7 @@
 #define FX_IT_BPM	0x87
 #define FX_IT_ROWDELAY	0x88
 #define FX_IT_PANSLIDE	0x89
+#define FX_PANBRELLO	0x8a
 
 /* MED effects */
 #define FX_HOLD_DECAY	0x90
